samples/_failures_safe/1761175476_282700_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1083231b.c: In function ‘main’:
./samples/SAFE/__tmp_1083231b.c:137:9: error: expected declaration or statement at end of input
  137 |         printf("Input error\n");
      |         ^~~~~~
./samples/SAFE/__tmp_1083231b.c:137:9: error: expected declaration or statement at end of input
